# secp256k1

./: .ghci  .gitignore  CHANGELOG  README.md  flake.nix  ppad-secp256k1.cabal
bench/: Main.hs  Weight.hs
lib/Crypto/: Secp256k1.hs
lib/Crypto/Curve/: Secp256k1.hs
test/: BIP340.hs  Main.hs  Noble.hs  Wycheproof.hs  WycheproofEcdh.hs
weigh-0.0.18/src/: Weigh.hs
