cabal-version:      3.0
name:               ppad-secp256k1
version:            0.1.0
synopsis:           Cryptographic primitives on the secp256k1 elliptic curve
license:            MIT
license-file:       LICENSE
author:             Jared Tobin
maintainer:         jared@ppad.tech
category:           Cryptography
build-type:         Simple
tested-with:        GHC == { 9.6.4 }
extra-doc-files:    CHANGELOG
description:
  A pure Haskell implementation of various cryptographic primitives on the
  secp256k1 elliptic curve.

source-repository head
  type:     git
  location: git.ppad.tech/secp256k1.git

library
  default-language: Haskell2010
  hs-source-dirs:   lib
  ghc-options:
      -Wall
  exposed-modules:
      Crypto.Secp256k1
  build-depends:
      base
