cabal-version:      3.0
name:               ppad-secp256k1
version:            0.1.0
synopsis:           Cryptographic primitives on the secp256k1 elliptic curve
license:            MIT
license-file:       LICENSE
author:             Jared Tobin
maintainer:         jared@ppad.tech
category:           Cryptography
build-type:         Simple
tested-with:        GHC == { 9.8.1, 9.6.4 }
extra-doc-files:    CHANGELOG
description:
  A pure Haskell implementation of various cryptographic primitives on the
  secp256k1 elliptic curve.

source-repository head
  type:     git
  location: git.ppad.tech/secp256k1.git

library
  default-language: Haskell2010
  hs-source-dirs:   lib
  ghc-options:
      -Wall
  exposed-modules:
      Crypto.Curve.Secp256k1
  build-depends:
      base
    , base16-bytestring
    , bytestring
    , ppad-hmac-drbg
    , ppad-sha256

test-suite secp256k1-tests
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      test
  main-is:             Main.hs
  other-modules:
    Wycheproof

  ghc-options:
    -rtsopts -Wall

  build-depends:
      aeson
    , attoparsec
    , base
    , base16-bytestring
    , bytestring
    , ppad-secp256k1
    , tasty
    , tasty-hunit
    , text

benchmark secp256k1-bench
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      bench
  main-is:             Main.hs

  ghc-options:
    -rtsopts -O2 -Wall -fno-warn-orphans

  build-depends:
      base
    , bytestring
    , criterion
    , deepseq
    , ppad-secp256k1

